<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.MainActivity">


    <TextView
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:id="@+id/cardnumber"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:id="@+id/ll_amount"
       app:layout_constraintTop_toBottomOf="@+id/cardnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:visibility="gone"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/email"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:tint="@color/orange" />

        </LinearLayout>

        <LinearLayout

            android:layout_weight="0.2"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:text="@string/enter_amount"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/amountET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:gravity="top"
                    android:focusableInTouchMode="true"
                    android:maxLines="1"
                    android:hint="@string/enter_amount"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/Gray"/>

                <View
                    android:background="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:id="@+id/llErroramount"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvErroramount"
                        android:text="@string/error_empty_amount"
                        android:layout_width="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_email"
        app:layout_constraintTop_toBottomOf="@id/ll_amount"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:visibility="gone"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/email"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:tint="@color/orange" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_weight="0.2"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:text="@string/enter_email"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_18sdp"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:gravity="top"
                    android:focusableInTouchMode="true"
                    android:maxLines="1"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/Gray"/>

                <View
                    android:background="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:id="@+id/llErrorEmail"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvErrorEmail"
                        android:text="@string/error_empty_email"
                        android:layout_width="wrap_content"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_10sdp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/submitBT"
        android:padding="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/backgrond_shape"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ll_email" />




</androidx.constraintlayout.widget.ConstraintLayout>

</layout>